tests/paczka1/fuzzy1/22192617.err
Error in line 16: Aqb S500 13%,7
Error in line 13: FacsS28Sbk S939 82,6
Error in line 38: FacsS28Sbk S542 116,64
Error in line 36: S500 S500 157,1
